--- a/src/main/resources/templates/Events/create.html
+++ b/src/main/resources/templates/Events/create.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container ">
+<body>
     <nav th:replace="fragments :: navigation"></nav>
     <h1>Create Form</h1>
 
@@ -16,7 +16,7 @@
             </lablel>
         </div>
         <br />
-        <div class="form-group">
+        <div>
             <input type="submit" value="Create Event" class="btn btn-success">
         </div>
     </form>
