--- a/src/main/resources/templates/Events/index.html
+++ b/src/main/resources/templates/Events/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head">
-    <title>All Events</title>
 </head>
-<body class="container">
+<body>
 <nav th:replace="fragments :: navigation"></nav>
 <h1>All Events</h1>
 
 <p th:unless="${events} and ${events.size()}">No Events!</p>
 
-<table class="table table-striped">
+<table>
     <thead>
     <tr>
         <th>Name</th>
@@ -19,9 +18,8 @@
     </thead>
 
     <tr  th:each="event : ${events}">
-        <td th:text = "${event.key}"></td>
-        <td th:text = "${event.value}"></td>
-        <td th:replace="fragments :: address"></td>
+        <td th:text = "${event.name}"></td>
+        <
     </tr>
 </table>
 </body>
