--- a/src/main/resources/templates/Events/create.html
+++ b/src/main/resources/templates/Events/create.html
@@ -7,17 +7,16 @@
 
     <form method="post" action="/events/create">
         <div class="form-group">
-            <label>Name
-                <input type="text" name="eventName" class="form-control">
+            <label>Event Name
+                <input type="text" name="eventName">
             </label>
-            <br />
-            <lablel>Description
-                <input type="text" name="eventDescription" class="form-control">
-            </lablel>
+            <label>Description
+                <input type="text" name="eventDescription">
+            </label>
         </div>
         <br />
         <div>
-            <input type="submit" value="Create Event" class="btn btn-success">
+            <input type="submit" value="Create Event">
         </div>
     </form>
 
