--- a/src/main/resources/templates/Events/index.html
+++ b/src/main/resources/templates/Events/index.html
@@ -11,15 +11,18 @@
 <table>
     <thead>
     <tr>
-        <th>Name</th>
+        <th>ID</th>
+        <th>Event Name</th>
         <th>Description</th>
-        <th>Address</th>
     </tr>
     </thead>
 
     <tr  th:each="event : ${events}">
+        <td th:text = "${event.id}"></td>
         <td th:text = "${event.name}"></td>
-        <
+        <td th:text = "${event.description}"></td>
+
+
     </tr>
 </table>
 </body>
