--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:fragment="head">
     <meta charset="UTF-8"/>
-    <link th:href="@{/styles.css}" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
 <body>
 
@@ -10,6 +10,7 @@
     <ul class="nav">
         <li class="nav-item"><a class="nav-link"  href="/events">All Events</a> </li>
         <li class="nav-item"><a class ="nav-link" href="/events/create">Create Event </a></li>
+        <li class="nav-item"><a class ="nav-link" href="/events/delete">Delete Events </a></li>
     </ul>
 </nav>
 
